--- a/AndroidFiAe02/app/src/main/res/values/styles.xml
+++ b/AndroidFiAe02/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:ThemeOverlay.Material.Light">
         <!-- Customize your theme here. -->
+        <item name="android:colorPrimary">#ff0000</item>
+        <item name="android:actionBarStyle">@style/ActionBarStyle</item>
     </style>
+    <!--<style name="ActionBarStyle" parent="android:ThemeOverlay.Material.Light">-->
+        <!--<item name="android:textColor">#00ff00</item>-->
+    <!--</style>-->
 
 </resources>
